--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ colorama==0.4.6
 DateTime==5.4
 Flask==3.0.0
 greenlet==3.0.2
+gunicorn==21.2.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+packaging==23.2
 psycopg2==2.9.9
 python-dotenv==1.0.0
 pytz==2023.3.post1
