--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ click==8.1.7
 colorama==0.4.6
 DateTime==5.4
 Flask==3.0.0
+Flask-Cors==4.0.0
 greenlet==3.0.2
 gunicorn==21.2.0
 itsdangerous==2.1.2
